Swap input for div for dropdown field

--- a/src/component/field/Dropdown.sass
+++ b/src/component/field/Dropdown.sass
@@ -56,11 +56,10 @@ $menu-height: #{200/$font-size}rem;
 
 .input {
   composes: Form-field from '../../styles/components/Form.scss';
-  composes: u-hsizeAll from global;
-
-  &::placeholder {
-    color: $zd-color-oil;
-  }
+  color: $zd-color-oil;
+  outline: none;
+  padding-bottom: #{8/$font-size}rem !important;
+  padding-top: #{8/$font-size}rem !important;
 
   &:focus {
     border: $thin-border-size solid $stroke-focused-color;
