Start passing down expandable on prop

--- a/src/component/container/ScrollContainer.sass
+++ b/src/component/container/ScrollContainer.sass
@@ -54,6 +54,10 @@
   }
 }
 
+.contentExpandable {
+  max-height: none;
+}
+
 .contentMobile {
   -webkit-overflow-scrolling: touch;
   composes: u-overflowAuto from global;
