Pass around newDesign prop to discern between old chat and new chat

--- a/src/component/container/ScrollContainer.sass
+++ b/src/component/container/ScrollContainer.sass
@@ -19,6 +19,10 @@
   color: $zd-color-dark-gray;
 }
 
+.userHeader {
+  composes: u-userHeaderColor from global;
+}
+
 .title {
   composes: u-textSizeMed u-textBold u-textCenter u-textXHeight from global;
 }
