--- a/src/component/chat/ChatPopup.sass
+++ b/src/component/chat/ChatPopup.sass
@@ -38,7 +38,7 @@
 
 .agentMessage {
   composes: u-posRelative u-nbfc from global;
-  height: #{33/$font-size}rem;
+  max-height: #{33/$font-size}rem;
   word-break: break-all;
 }
 
