--- a/src/embed/automaticAnswers/automaticAnswers.scss
+++ b/src/embed/automaticAnswers/automaticAnswers.scss
@@ -41,11 +41,45 @@
     color: $zd-color-aluminum;
     display: block;
   }
+}
 
-  a {
+// START: AutomaticAnswersAnchor
+// lovingly adapted from ZD Garden http://garden.zendesk.com/css-buttons/
+.AutomaticAnswersAnchor {
+  display: inline;
+  background-color: transparent;
+  cursor: pointer;
+  padding: 0;
+  text-decoration: none;
+  user-select: none;
+  line-height: normal;
+  white-space: normal;
+  color: $zd-color-pelorous;
+  font-size: inherit;
+  font-weight: $zd-font-weight-bold;
+
+  &:hover,
+  &:active {
+    background-color: transparent;
+    text-decoration: none;
     color: $zd-color-pelorous;
   }
+
+  &:focused {
+    text-decoration: underline;
+  }
 }
+
+.AutomaticAnswersAnchor--disabled {
+  background-color: transparent;
+  color: $inactive-color;
+
+  &:hover {
+    color: $inactive-color;
+    cursor: default;
+  }
+}
+// END: AutomaticAnswersAnchor
 
 .AutomaticAnswersDesktop-footer {
   height: #{37/$font-size}rem;
@@ -135,3 +169,29 @@
     background-color: transparent !important;
   }
 }
+
+// START: AutomaticAnswersCallOut
+// lovingly adapted from ZD Garden http://garden.zendesk.com/css-callouts/
+.AutomaticAnswersCallout {
+  background-color: $zd-color-white;
+}
+
+.AutomaticAnswersCallout--error {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14' color='%23EB6651'%3E%3Cpath fill='currentColor' d='M7 0C3.13 0 0 3.13 0 7s3.13 7 7 7 7-3.13 7-7-3.13-7-7-7zm-.75 3.75c0-.41.34-.75.75-.75s.75.34.75.75v2.5c0 .41-.34.75-.75.75s-.75-.34-.75-.75v-2.5zM7 11c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: 10px 0;
+  padding-left: 40px;
+}
+
+.AutomaticAnswersCallout__title {
+  display: block;
+  margin: 0;
+  color: $zd-color-flamingo;
+  font-weight: $zd-font-weight-bold;
+}
+
+.AutomaticAnswersCallout__paragraph {
+  margin: 5px 0 0;
+  color: $zd-color-monsoon;
+}
+// END: AutomaticAnswersCallout
