Float breaks widgets dimensions use flexbox instead

--- a/src/component/chat/Chat.sass
+++ b/src/component/chat/Chat.sass
@@ -13,6 +13,10 @@
   composes: u-marginBM from global;
 }
 
+.footer {
+  padding-bottom: #{8/$font-size}rem !important;
+}
+
 .chatEnd {
   composes: u-textCenter from global;
 }
