--- a/src/component/chat/ChatFooter.sass
+++ b/src/component/chat/ChatFooter.sass
@@ -1,7 +1,7 @@
 @import '../../styles/_vars.scss';
 
 .icons {
-  composes: u-pullRight from global;
-
-  margin-bottom: #{8/$font-size}rem;
+  composes: u-flex from global;
+  justify-content: flex-end;
+  padding-top: #{8/$font-size}rem;
 }
