Use hex instead of rbg strings, add a extra white light color specific stuff

--- a/src/component/Launcher.sass
+++ b/src/component/Launcher.sass
@@ -8,7 +8,7 @@ $Button-baseFontSize: #{14/$font-size}rem;
 $Button-nudge: 5;
 
 .wrapper {
-  composes: u-isActionable u-textLeft u-inlineBlock u-borderNone u-textBold u-textNoWrap Arrange Arrange--middle from global;
+  composes: u-isActionable u-textLeft u-inlineBlock u-borderNone u-textBold u-textNoWrap Arrange Arrange--middle u-userLauncherColor from global;
   font-size: $Button-baseFontSize;
   color: $base-color;
   fill: $base-color;
