Fix button styles for AnswerBot widget.

--- a/src/embed/automaticAnswers/automaticAnswers.scss
+++ b/src/embed/automaticAnswers/automaticAnswers.scss
@@ -150,13 +150,37 @@
 }
 
 .AutomaticAnswersBtn {
-  color: $zd-color-white;
   font-size: #{12/$font-size}rem;
   border-radius: #{3/$font-size}rem;
   border: #{1/$font-size}rem solid $zd-color-oil !important;
 
   &:disabled {
     border-color: transparent !important;
+  }
+}
+
+.AutomaticAnswersBtn,
+.AutomaticAnswersBtn--mobile {
+  &.u-userBorderColor:not([disabled]) {
+    border-color: $zd-color-oil !important;
+    color: $zd-color-oil !important;
+  }
+
+  &.u-userBackgroundColor:not([disabled]):hover,
+  &.u-userBackgroundColor:not([disabled]):active,
+  &.u-userBackgroundColor:not([disabled]):focus {
+    border-color: $zd-color-dark-gray !important;
+    background-color: $zd-color-dark-gray !important;
+    color: $zd-color-white !important;
+  }
+
+  // Neutralise c-btn behaviour
+  &.u-userBorderColor:not([disabled]):hover,
+  &.u-userBorderColor:not([disabled]):active,
+  &.u-userBorderColor:not([disabled]):focus {
+    border-color: $zd-color-dark-gray !important;
+    background-color: $zd-color-dark-gray !important;
+    color: $zd-color-white !important;
   }
 }
 
@@ -170,14 +194,6 @@
   min-width: #{100/$font-size}rem;
   padding-left: #{10/$font-size}rem;
   padding-right: #{10/$font-size}rem;
-
-  // Neutralise c-btn behaviour
-  &.u-userBorderColor:not([disabled]):hover,
-  &.u-userBorderColor:not([disabled]):active,
-  &.u-userBorderColor:not([disabled]):focus {
-    color: $zd-color-oil !important;
-    background-color: transparent !important;
-  }
 }
 
 // START: AutomaticAnswersCallOut
