--- a/src/component/chat/Chat.sass
+++ b/src/component/chat/Chat.sass
@@ -20,3 +20,12 @@
 .chatEnd {
   composes: u-textCenter from global;
 }
+
+.chatEndPopup {
+  composes: u-posAbsolute u-textCenter from global;
+  bottom: 10;
+}
+
+.chatEndPopupDescription {
+  composes: u-paddingTL u-paddingBS from global;
+}
