Adjust CSS for ChatPopup component

--- a/src/component/chat/Chat.sass
+++ b/src/component/chat/Chat.sass
@@ -22,10 +22,10 @@
 }
 
 .chatEndPopup {
-  composes: u-posAbsolute u-textCenter from global;
+  composes: u-posAbsolute from global;
   bottom: 10;
 }
 
 .chatEndPopupDescription {
-  composes: u-paddingTL u-paddingBS from global;
+  composes: u-paddingVL u-paddingLL from global;
 }
