Remove extra semi-colon

--- a/src/component/chat/Chat.sass
+++ b/src/component/chat/Chat.sass
@@ -23,7 +23,7 @@
 
 .chatEndPopup {
   composes: u-posAbsolute from global;
-  bottom: #{10/$font-size}rem;;
+  bottom: #{10/$font-size}rem;
 }
 
 .chatEndPopupDescription {
