Disable feedback send button when rating is not chosen

--- a/src/component/chat/ChatFeedbackForm.sass
+++ b/src/component/chat/ChatFeedbackForm.sass
@@ -22,10 +22,13 @@
   composes: u-marginBM u-hsizeAll u-paddingTS u-paddingHS from global;
   border-radius: #{4/$font-size}rem;
   resize: none;
+  outline: none;
 }
 
 .feedbackDescription {
   composes: u-marginBS u-block from global;
-  margin-top: #{12/$font-size}rem;
 }
 
+.chatRatingGroup {
+  composes: u-marginVS from global;
+}
