--- a/src/component/chat/ChatMenu.sass
+++ b/src/component/chat/ChatMenu.sass
@@ -1,7 +1,7 @@
 @import '../../styles/_vars.scss';
 
 .container {
-  composes: u-posAbsolute u-marginAS u-posEnd--flush from global;
+  composes: u-posAbsolute u-marginAS u-posEnd--flush u-zIndex1 from global;
 
   background-color: $base-color;
   bottom: #{20/$font-size}rem;
