--- a/src/component/chat/ChatRatingGroup.sass
+++ b/src/component/chat/ChatRatingGroup.sass
@@ -4,6 +4,18 @@
   margin-left: auto;
 }
 
+.ratingIcon {
+  composes: u-borderTransparent from global;
+  display: inline-block !important;
+  padding: #{6/$font-size}rem;
+  height: #{16/$font-size}rem;
+  width: #{16/$font-size}rem;
+
+  &:hover, &:focus, &:active {
+    background-color: $zd-color-white;
+  }
+}
+
 .ratingIconActive {
   border: #{1/$font-size}rem solid $zd-color-gainsboro !important;
   border-radius: #{4/$font-size}rem;
@@ -18,20 +30,10 @@
   }
 }
 
-.ratingIcon {
-  composes: u-borderTransparent from global;
-  display: inline-block !important;
-  padding: #{6/$font-size}rem;
-  height: #{16/$font-size}rem;
-  width: #{16/$font-size}rem;
-
-  &:hover, &:focus, &:active {
-    background-color: $zd-color-white;
-  }
-}
-
-.thumbDownIcon {
+.leftRatingIcon {
   composes: ratingIcon;
-  padding-top: #{7/$font-size}rem;
-  padding-bottom: #{5/$font-size}rem;
+
+  svg {
+    padding-left: #{1/$font-size}rem;
+  }
 }
