Adjust visual elements based on design feedback

--- a/src/component/chat/ChatRatingGroup.sass
+++ b/src/component/chat/ChatRatingGroup.sass
@@ -32,6 +32,8 @@
 
 .leftRatingIcon {
   composes: ratingIcon;
+  padding-top: #{5/$font-size}rem;
+  padding-bottom: #{7/$font-size}rem;
 
   svg {
     padding-left: #{1/$font-size}rem;
