--- a/src/component/chat/ChatReconnectionBubble.sass
+++ b/src/component/chat/ChatReconnectionBubble.sass
@@ -9,4 +9,28 @@
   border-radius: #{4/$font-size}rem !important;
   background-color: white;
   box-shadow: 0 #{1/$font-size}rem #{10/$font-size}rem 0 rgba(0, 0, 0, 0.2);
+  width: #{127/$font-size}rem;
+  height: #{34/$font-size}rem;
+  line-height: #{36/$font-size}rem;
+}
+
+.contentContainer {
+  text-align: center;
+}
+
+.loadingSpinner {
+  width: #{16/$font-size}rem;
+  height: #{16/$font-size}rem;
+  vertical-align: middle;
+  stroke-width: #{8/$font-size}rem;
+}
+
+.title {
+  display: inline-block;
+  margin-right: #{7/$font-size}rem;
+  vertical-align: middle;
+}
+
+.circle {
+  stroke-width: #{10/$font-size}rem;
 }
