Add the icon to the chat footer and hook it up to the end chat notification

--- a/src/component/chat/ChatFooter.sass
+++ b/src/component/chat/ChatFooter.sass
@@ -5,3 +5,7 @@
   justify-content: flex-end;
   padding-top: #{8/$font-size}rem;
 }
+
+.iconEndChat {
+  composes: Icon--ellipsis u-marginLS from global;
+}
