Make disabled state a bit lighter as per Mandy's directions

--- a/src/component/chat/ChatFooter.sass
+++ b/src/component/chat/ChatFooter.sass
@@ -13,14 +13,14 @@
 .iconDisabled {
   svg {
     g {
-      fill: $zd-color-aluminum !important;
+      fill: $zd-color-iron !important;
     }
 
     &:hover, &:active, &:focus {
       background: none;
 
       g {
-        fill: $zd-color-aluminum !important;
+        fill: $zd-color-iron !important;
       }
     }
   }
