render new ChatContactDetails Popup component in chat

--- a/src/component/chat/Chat.sass
+++ b/src/component/chat/Chat.sass
@@ -22,7 +22,7 @@
   composes: u-textCenter from global;
 }
 
-.chatEndPopup {
+.bottomPopup {
   composes: u-posAbsolute from global;
   bottom: #{10/$font-size}rem;
 }
