Style attachment icon and disable it when a chat isn't in progress

--- a/src/component/chat/ChatFooter.sass
+++ b/src/component/chat/ChatFooter.sass
@@ -6,8 +6,26 @@
   padding-top: #{8/$font-size}rem;
 }
 
-.iconEndChat {
-  composes: Icon--ellipsis u-marginLS from global;
+.icon {
+  composes: Icon--ellipsis u-paddingLN from global;
+
+  padding-right: #{3/$font-size}rem;
+}
+
+.iconAttachment {
+  composes: icon;
+
+  svg {
+    path {
+      stroke: $zd-color-aluminum !important;
+    }
+
+    &:hover, &:active, &:focus {
+      path {
+        stroke: $zd-color-dark-gray !important;
+      }
+    }
+  }
 }
 
 .iconDisabled {
@@ -21,6 +39,22 @@
 
       g {
         fill: $zd-color-iron !important;
+      }
+    }
+  }
+}
+
+.iconAttachmentDisabled {
+  composes: iconDisabled;
+
+  svg {
+    path {
+      stroke: $zd-color-iron !important;
+    }
+
+    &:hover, &:active, &:focus {
+      path {
+        stroke: $zd-color-iron !important;
       }
     }
   }
