--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -134,7 +134,11 @@
     min-height: #{16/$font-size}rem; /* 1 */
     height: #{16/$font-size}rem;
     width: #{16/$font-size}rem;
-    transform: rotate(45deg) scaleX(-1);
+
+    path {
+      transform-origin: center;
+      transform: rotate(45deg);
+    }
   }
 }
 
