Add typing indicator in agent typing panel

--- a/src/component/chat/Chat.sass
+++ b/src/component/chat/Chat.sass
@@ -38,3 +38,12 @@
   width: #{301/$font-size}rem;
   background: linear-gradient(to bottom, rgba($zd-color-white, 0), rgba($zd-color-white, 0.8));
 }
+
+.loadingEllipses {
+  composes: u-inlineBlock from global;
+  padding-right: #{4/$font-size}rem;
+}
+
+.loadingEllipsesItem {
+  background-color: $zd-color-monsoon !important;
+}
