--- a/src/component/chat/Chat.sass
+++ b/src/component/chat/Chat.sass
@@ -34,16 +34,20 @@
 .agentTyping {
   composes: u-posAbsolute u-paddingTS from global;
   bottom: #{103/$font-size}rem;
-  color: $zd-color-monsoon;
+  color: $zd-color-aluminum;
   width: #{301/$font-size}rem;
   background: linear-gradient(to bottom, rgba($zd-color-white, 0), rgba($zd-color-white, 0.8));
 }
 
 .loadingEllipses {
   composes: u-inlineBlock from global;
-  padding-right: #{4/$font-size}rem;
+  padding-right: #{2/$font-size}rem;
 }
 
 .loadingEllipsesItem {
-  background-color: $zd-color-monsoon !important;
+  background-color: $typing-loading-color !important;
+  width: #{4/$font-size}rem;
+  height: #{4/$font-size}rem;
+  margin-right: #{1/$font-size}rem;
+  margin-bottom: #{2/$font-size}rem;
 }
