--- a/src/component/chat/Chat.sass
+++ b/src/component/chat/Chat.sass
@@ -45,7 +45,7 @@
 }
 
 .loadingEllipsesItem {
-  background-color: $typing-loading-color !important;
+  background-color: $zd-color-iron !important;
   width: #{4/$font-size}rem;
   height: #{4/$font-size}rem;
   margin-right: #{1/$font-size}rem;
