--- a/src/component/chat/ChatMenu.sass
+++ b/src/component/chat/ChatMenu.sass
@@ -18,9 +18,17 @@
   color: $zd-color-monsoon;
   padding: #{8/$font-size}rem #{15/$font-size}rem;
 
+  path {
+    fill: $zd-color-monsoon;
+  }
+
   &:hover, &:active, &:focus {
     color: $zd-color-oil;
     background: $zd-color-white-smoke;
+
+    path {
+      fill: $zd-color-oil;
+    }
   }
 
   &:disabled {
@@ -34,4 +42,18 @@
 
   margin: #{4/$font-size}rem 0;
   border-color: $zd-color-platinum;
+}
+
+.soundIcon {
+  composes: u-inlineBlock from global;
+  vertical-align: middle;
+  padding-left: #{6/$font-size}rem;
+  padding-bottom: #{2/$font-size}rem;
+
+  svg {
+    min-height: #{15/$font-size}rem;
+    min-width: #{15/$font-size}rem;
+    height: #{15/$font-size}rem;
+    width: #{15/$font-size}rem;
+  }
 }
