--- a/src/component/field/SearchInput.sass
+++ b/src/component/field/SearchInput.sass
@@ -5,7 +5,8 @@
 }
 
 .searchInput {
-  composes: Arrange-sizeFill u-paddingR Form-placeholder from global;
+  composes: Arrange-sizeFill u-paddingHT from global;
+  composes: Form-placeholder from '../../styles/components/Form.scss';
 }
 
 .fullscreen {
