Code review comments

--- a/src/component/button/ButtonGroup.sass
+++ b/src/component/button/ButtonGroup.sass
@@ -1,7 +1,7 @@
 @import '../../styles/_vars.scss';
 
 .container {
-  composes: ButtonGroup from global;
+  composes: ButtonGroup from '../../styles/components/Button.scss';
 }
 
 .buttonleft {
