--- a/src/component/button/ButtonNav.sass
+++ b/src/component/button/ButtonNav.sass
@@ -5,7 +5,8 @@
 }
 
 .button {
-  composes: Button Button--nav u-posAbsolute u-posStart--vertFlush from global;
+  composes: u-posAbsolute u-posStart--vertFlush from global;
+  composes: Button Button--nav from '../../styles/components/Button.scss';
 }
 
 .left {
