--- a/src/component/button/ButtonSecondary.sass
+++ b/src/component/button/ButtonSecondary.sass
@@ -1,5 +1,5 @@
 @import '../../styles/_vars.scss';
 
 .button {
-  composes: c-btn c-btn--medium c-btn--secondary from global;
+  composes: c-btn c-btn--medium c-btn--secondary from '../../styles/components/Button.scss';
 }
