--- a/src/component/button/IconFieldButton.sass
+++ b/src/component/button/IconFieldButton.sass
@@ -1,7 +1,8 @@
 @import '../../styles/_vars.scss';
 
 .button {
-  composes: Button--field u-borderTransparent u-marginLS from global;
+  composes: u-borderTransparent u-marginLS from global;
+  composes: Button--field from '../../styles/components/Button.scss';
 }
 
 .focused {
@@ -13,7 +14,8 @@
 }
 
 .fullscreen {
-  composes: Button--fieldMobile Anim-color from global;
+  composes: Button--fieldMobile from '../../styles/components/Button.scss';
+  composes: Anim-color from '../../styles/components/Animation.scss';
 }
 
 .hovering {
