--- a/src/component/channelChoice/ChannelChoiceMenu.sass
+++ b/src/component/channelChoice/ChannelChoiceMenu.sass
@@ -8,3 +8,24 @@
     fill: $zd-color-iron !important;
   }
 }
+
+.iconTalk {
+  svg {
+    height: #{18/$font-size}rem !important;
+    width: #{18/$font-size}rem !important;
+
+    path {
+      stroke: $zd-color-monsoon;
+      fill: none;
+    }
+  }
+}
+
+.buttonTalk {
+  &:hover, &:focus, &:active {
+    svg path {
+      fill: none;
+      stroke: $zd-color-dark-gray;
+    }
+  }
+}
