Fix color for selected dropdown item

--- a/src/component/field/Dropdown.sass
+++ b/src/component/field/Dropdown.sass
@@ -56,7 +56,7 @@ $menu-height: #{200/$font-size}rem;
 
 .input {
   composes: Form-field from '../../styles/components/Form.scss';
-  color: $zd-color-oil;
+  color: $zd-color-oil !important;
   outline: none;
   padding-bottom: #{8/$font-size}rem !important;
   padding-top: #{8/$font-size}rem !important;
