Tweak design so that talk icon is centered properly

--- a/src/component/channelChoice/ChannelChoiceMenu.sass
+++ b/src/component/channelChoice/ChannelChoiceMenu.sass
@@ -10,6 +10,8 @@
 }
 
 .iconTalk {
+  padding-right: #{13/$font-size}rem !important;
+
   svg {
     height: #{18/$font-size}rem !important;
     width: #{18/$font-size}rem !important;
@@ -22,6 +24,8 @@
 }
 
 .buttonTalk {
+  padding-left: #{9/$font-size}rem !important;
+
   &:hover, &:focus, &:active {
     svg path {
       fill: none;
