Rewrite test descriptions to use active voice, formatting updates

--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -238,6 +238,10 @@ u-overflowAuto {
   padding: 0 !important;
 }
 
+.u-paddingAT {
+  padding: $spacing-tny !important;
+}
+
 .u-paddingAS {
   padding: $spacing-sml !important;
 }
