Add success notification and styles to Talk component

--- a/src/component/talk/Talk.sass
+++ b/src/component/talk/Talk.sass
@@ -1,3 +1,15 @@
 .footer {
   composes: u-paddingVN from global;
 }
+
+.notify {
+  composes: u-textCenter from global;
+}
+
+.notifyIcon {
+  composes: u-inlineBlock u-posRelative u-marginTL from global;
+}
+
+.notifyMessage {
+  composes: u-marginBN from global;
+}
