--- a/src/component/button/ButtonGroup.sass
+++ b/src/component/button/ButtonGroup.sass
@@ -4,7 +4,7 @@
   composes: ButtonGroup from '../../styles/components/Button.scss';
 }
 
-.buttonleft {
+.buttonLeft {
   composes: u-textLeft from global;
 }
 
