Add comment to usage of flag styles

--- a/src/component/Flag.sass
+++ b/src/component/Flag.sass
@@ -1,5 +1,11 @@
 @import '../styles/_vars.scss';
 
+
+/**
+ *  Do not add CSS modules in this style since we need it to be imported
+ *  without it being expanded. For CSS modules to be used in the flag,
+ *  use .container.
+ */
 .flag {
   background: url('../asset/images/flags.png') no-repeat;
 }
