Update placeholder color to make it a bit lighter and easier to read

--- a/src/styles/components/Form.scss
+++ b/src/styles/components/Form.scss
@@ -176,9 +176,9 @@ $Form-fontSize: #{13/$font-size}rem;
 }
 
 .Form-placeholder {
-  color: $zd-color-gainsboro;
+  color: $zd-color-silver-sand;
 
   &::placeholder {
-    color: $zd-color-gainsboro;
+    color: $zd-color-silver-sand;
   }
 }
