Add phone only title and adjust some styles

--- a/src/component/talk/Talk.sass
+++ b/src/component/talk/Talk.sass
@@ -36,11 +36,11 @@
 }
 
 .phoneOnlyContainer {
-  composes: u-marginBL from global;
+  margin-bottom: #{50/$font-size}rem;
 }
 
 .phoneOnlyMessage {
-  composes: u-marginBN from global;
+  composes: u-marginBS from global;
 }
 
 .phoneNumber {
