Add a error render notification on the bottom of Talk's form

--- a/src/component/submitTicket/SubmitTicket.sass
+++ b/src/component/submitTicket/SubmitTicket.sass
@@ -58,8 +58,12 @@
 }
 
 .error {
-  composes: u-marginTL from global;
+  composes: u-flex u-marginTL from global;
   composes: Error from '../../styles/components/Error.scss';
+}
+
+.errorIcon {
+  composes: ErrorIcon from '../../styles/components/Error.scss';
 }
 
 .loadingSpinner {
