--- a/src/component/talk/Talk.sass
+++ b/src/component/talk/Talk.sass
@@ -51,3 +51,12 @@
   composes: u-textCenter from global;
   font-size: #{20/$font-size}rem;
 }
+
+.error {
+  composes: u-flex u-marginBM from global;
+  composes: Error from '../../styles/components/Error.scss';
+}
+
+.errorIcon {
+  composes: ErrorIcon from '../../styles/components/Error.scss';
+}
