Change line-height to be 18px

--- a/src/component/talk/Talk.sass
+++ b/src/component/talk/Talk.sass
@@ -8,6 +8,10 @@
   composes: u-marginBM from global;
 }
 
+.formHeaderMessage {
+  composes: u-textHeightMed from global;
+}
+
 .footer {
   composes: u-paddingVN from global;
 }
@@ -21,7 +25,7 @@
 }
 
 .notifyMessage {
-  composes: u-marginBN from global;
+  composes: u-marginBN u-textHeightMed from global;
 }
 
 .phoneDisplayLabel {
@@ -40,7 +44,7 @@
 }
 
 .phoneOnlyMessage {
-  composes: u-marginBS from global;
+  composes: u-marginBS u-textHeightMed from global;
 }
 
 .phoneNumber {
