--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -471,6 +471,10 @@ u-overflowAuto {
   font-weight: normal !important;
 }
 
+.u-textHeightMed {
+  line-height: #{18/$font-size}rem;
+}
+
 /* Force a single line to have exact font height  */
 .u-textXHeight {
   line-height: 0.9;
