--- a/src/component/talk/TalkPhoneField.sass
+++ b/src/component/talk/TalkPhoneField.sass
@@ -34,7 +34,6 @@
 
 .attention {
   border: none !important;
-
   box-shadow: none !important;
 }
 
@@ -87,6 +86,8 @@
 .selectedFlag {
   composes: u-posAbsolute from global;
   width: #{20/$font-size}rem !important;
+  top: #{8/$font-size}rem !important;
+  left: #{11/$font-size}rem !important;
 }
 
 .dropdownFlag {
