--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -322,6 +322,10 @@ u-overflowAuto {
   padding-left: #{25/$font-size}rem;
 }
 
+.u-paddingLT {
+  padding-left: $spacing-tny;
+}
+
 .u-paddingLS {
   padding-left: $spacing-sml;
 }
