Apply styles to offline screen

--- a/src/component/talk/Talk.sass
+++ b/src/component/talk/Talk.sass
@@ -69,3 +69,15 @@
 .errorIcon {
   composes: ErrorIcon from '../../styles/components/Error.scss';
 }
+
+.offline {
+  margin-bottom: #{50/$font-size}rem;
+}
+
+.offlineLabel {
+  composes: u-textCenter u-textSizeNml from global;
+}
+
+.offlineLink {
+  composes: u-textCenter u-textSizeNml u-userLinkColor from global;
+}
