--- a/src/component/button/ButtonDropzone.sass
+++ b/src/component/button/ButtonDropzone.sass
@@ -2,8 +2,10 @@
 
 .dropzone {
   composes: u-isActionable u-marginTS from global;
-  composes: Button--dropzone from '../../styles/components/Button.scss';
   composes: Container--dashed from '../../styles/components/Container.scss';
+
+  padding: #{14/$font-size}rem #{10/$font-size}rem;
+  color: $secondary-color;
 }
 
 .dropzoneActive {
