--- a/src/component/container/Container.sass
+++ b/src/component/container/Container.sass
@@ -1,11 +1,14 @@
 @import '../../styles/_vars.scss';
 
 .container {
-  composes: Container u-posRelative from global;
+  composes: u-posRelative from global;
+  box-sizing: border-box;
 }
 
 .desktop {
-  composes: Container--popover from global;
+  border-radius: #{8/$font-size}rem;
+  box-shadow: 0 0 #{6/$font-size}rem 0 rgba($base-shadow, .2);
+  background: rgba($base-color, .98);
 }
 
 .mobile {
@@ -13,5 +16,10 @@
 }
 
 .card {
-  composes: Container--card from global;
+  border-radius: #{5/$font-size}rem;
+  box-shadow: 0 #{$thin-border-size/$font-size}rem #{4/$font-size}rem 0 rgba($base-shadow, .3);
+  background: rgba($base-color, .98);
+  max-width: #{620/$font-size}rem;
+  min-width: #{400/$font-size}rem;
+  padding: #{30/$font-size}rem #{40/$font-size}rem 0;
 }
